backport: re PR tree-optimization/38359 (ICE in set_lattice_value, at tree-ssa-ccp.c:466)

2009-01-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-12-02  Richard Guenther  <rguenther@suse.de>

        PR tree-optimization/38359
        * fold-const.c (fold_binary): Fold -1 >> x to -1 only for
        non-negative x.

        * gcc.c-torture/compile/pr38359.c: New testcase.
        * gcc.c-torture/execute/shiftopt-1.c: Adjust.

From-SVN: r143656